1) Added a __metaclass__: SetupClass. Thanks to this metaclass ... ..., setup() methods of all the classes in the class hiearchy will be called  automatically __init__() is called. Default.setup() is called last. This helps in adding in setup code that will be run __init__(). Rotation and shifting will be implemented using this feature. 2) Added mlabwrap-purepy to path. Now we can call matlab from python. 3) started oguz/shift project  for working on shifting. 4) shutdown some printing in bfoa.py and ga.py,  since they make very long runs longer.

--- a/PyMeta/.settings/org.eclipse.core.resources.prefs
+++ b/PyMeta/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//bin/oguz/lift/src/main.py=utf-8
+encoding//bin/oguz/shift/src/main.py=utf-8
 encoding/setup.py=utf-8
