Fixed a bug about dashes

--- a/PyMeta/.settings/org.eclipse.core.resources.prefs
+++ b/PyMeta/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//bin/erisa/supplychainproblem/src/main.py=utf-8
 encoding//bin/oguz/cec14soo/src/main.py=utf-8
 encoding//bin/oguz/lift/src/main.py=utf-8
 encoding//bin/oguz/shift/src/main.py=utf-8
