--- a/PyMeta/.settings/org.eclipse.core.resources.prefs
+++ b/PyMeta/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//bin/erisa/supplychainproblem/src/main.py=utf-8
 encoding//bin/oguz/06msa/src/main.py=utf-8
 encoding//bin/oguz/cec14soo/src/main.py=utf-8
+encoding//bin/oguz/cec14soo/src/report.py=utf-8
 encoding//bin/oguz/lift/src/main.py=utf-8
 encoding//bin/oguz/shift/src/main.py=utf-8
 encoding//bin/oguz/visualisation/src/main.py=utf-8
