--- a/PyMeta/.settings/org.eclipse.core.resources.prefs
+++ b/PyMeta/.settings/org.eclipse.core.resources.prefs
@@ -6,4 +6,5 @@ encoding//bin/oguz/cec14soo/src/report.py=utf-8
 encoding//bin/oguz/lift/src/main.py=utf-8
 encoding//bin/oguz/shift/src/main.py=utf-8
 encoding//bin/oguz/visualisation/src/main.py=utf-8
+encoding//todo/aaatodo.py=UTF-8
 encoding/setup.py=utf-8
